--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "isomorphic-unfetch": "^2.0.0",
     "jsonwebtoken": "^7.4.2",
     "multer": "^1.3.0",
+    "mysql": "^2.14.1",
     "node-fetch": "^1.7.2",
     "pg": "^7.0.2",
     "rimraf": "^2.6.1",
